style.css
* {
    font-family: 'Roboto', sans-serif;
}

html {
    padding: 0px;
    margin: 0px;
}

body {
    background-color: #181818;
    color: whitesmoke;
    margin: 0px;
    padding: 0px;
}

header {
    position: fixed;
    top: 0px;
    display: flex;
    opacity: 0.985;
    flex-direction: row;
    justify-content: space-between;
    background-color: #202020;
    height: 65px;
    width: 100%;
    padding: 0px;
    margin: 0px;
}

/* header CLEARED */

header>* {
    display: flex;
    flex-direction: row;
    justify-content: center;
}

/* HEADER LEFT */

#header_left {
    width: 10%;
}

#header_left>* {
    margin: auto;
}

#burger {
    color: whitesmoke;
    font-size: 20px;
    background-color: transparent;
    width: 50px;
    border: 0px transparent solid;
}

#header_left a img {
    width: 100px;
}

/* HEADER CENTER */

#header_center {
    height: 45px;
    width: 700px;
    height: 70%;
    margin: auto;
}

#button_search{
    background-color: transparent;
    border: 0px transparent solid;
    border-radius: 100px;
    padding-left: 10px;
}

#dark a{
    width: 20px;
    padding: 0px;
    display: grid;
    place-items: center;
}

#dark {
    background-color: #323232;
    border: #323232 solid 1px;
    border-radius: 1px;
    margin: auto;
    height: 80%;
    width: 100%;
}


#dark input {
    width: 90%;
    height: 100%;
    background-color: #121212;
    border: transparent solid 0px;
    border-radius: 1px;
    padding-left: 15px;
    color: rgb(170, 170, 170);
    font-size: 1rem;
}

/* ajustement du logo loupe */
#dark a {
    margin-left: 15px;
    margin-top: 10px;
}

#dark input:focus {
    outline: solid 1px #204e8a;
}

/* logo de recherche vocale */
#voice_search {
    background-color: #121212;
    width: 45px;
    height: 45px;
    margin-left: 15px;
    border: transparent solid 0px;
    border-radius: 50%;
    color: whitesmoke;
    text-align: center;
}

/* HEADER RIGHT */

#header_right {
    width: 10%;
    margin-right: 20px;
    justify-content: space-around;
}

#header_right>* {
    margin: auto;
}

nav button {
    background-color: transparent;
    width: 40px;
    height: 40px;
    border: 0px transparent solid;
    border-radius: 100px;
    aspect-ratio: 1;
}

#profile {
    box-shadow:
        inset 0 0 50px #fff,
        /* inner white */
        inset 20px 0 80px rgb(219, 182, 18),
        /* inner left magenta short */
        inset -20px 0 80px #0ff,
        /* inner right cyan short */
        inset 20px 0 300px rgb(211, 186, 44),
        /* inner left magenta broad */
        inset -20px 0 300px #0ff
        /* inner right cyan broad */
}

/* SUGGESTIONS AI */

#sub_header {
    position: fixed;
    background-color: #202020;
    border-top: 1px rgb(59, 59, 59) solid;
    border-bottom: 1px rgb(59, 59, 59) solid;
    width: 86.5%;
    right: 0px;
    top: 0px;
    margin-top: 65px;
    height: 55px;
    overflow: hidden;
    padding-left: 10px;
}

.suggestion:first-child {
    background-color: white;
    color: #202020;
}

.group_nav h3 {
    margin-left: 30px;
    font-size: 0.9rem;
    color: grey;
}

.suggestion {
    width: fit-content;
    height: 55%;
    padding-left: 10px;
    padding-right: 10px;
    background-color: #474747;
    color: white;
    border: rgb(93, 93, 93) 1px solid;
    border-radius: 30px;
    margin-top: 15px;
}

.group_nav {
    border-bottom: 1px rgb(58, 58, 58) solid;
}

.suggestion:hover {
    background-color: #575757;
    color: white;
}

.suggestion:focus {
    background-color: white;
    color: #202020;
}

button:hover {
    cursor: pointer;
}

aside{
    position: fixed;
    top: 65px;
    height: 100%;
    overflow: auto;
    width:250px;
    background-color: #202020;
}

aside nav {
    display: flex;
    flex-direction: column;
    width: 250px;
}

.nav_selection {
    width: 220px;
    color: whitesmoke;
    display: flex;
    flex-direction: row;
    justify-content: flex-start;
    font-size: 0.8rem;
    padding-left: 30px;
}

.nav_selection:hover {
    cursor: pointer;
    background-color: #383838;
    width: 220px;
}

.group_nav:last-child{
    border: 0px transparent solid;
}

#accueil {
    background-color: #383838;
    width: 220px;
}

.nav_selection>* {
    width: fit-content;
}

.nav_selection h4 {
    display: flex;
    flex-direction: column;
    justify-content: center;
    margin-left: 10px;
}

main {
    width: 75%;
    display: flex;
    justify-content: flex-start;
    flex-direction: row;
    flex-wrap: wrap;
    margin-top: 130px;
    margin-left: 250px;
    padding-left: 70px;
    padding-right: 70px;
    background-color: #181818;
}

#channelpp {
    width: 50px;
    height: 50px;
    border: transparent 0px solid;
    border-radius: 50%;
    box-shadow:
        inset 0 0 50px #fff,
        /* inner white */
        inset 20px 0 80px #f0f,
        /* inner left magenta short */
        inset -20px 0 80px #0ff,
        /* inner right cyan short */
        inset 20px 0 300px #f0f,
        /* inner left magenta broad */
        inset -20px 0 300px #0ff;
    /* outer right cyan */
}

h4 {
    margin: 0px;
}

.stats {
    margin: 0px;
    padding: 0px;
    display: flex;
    flex-direction: row;
    justify-content: space-between;
}

hr {
    color: white;
    width: 80%;
}

#time {
    width: 35px;
    height: auto;
    margin: 5px;
    background-color: #202020;
    font-size: 0.7rem;
    justify-content: center;
    margin-left: 90%;
}

.misc {
    padding: 0px;
    margin-top: 10px;
    display: flex;
    flex-direction: row;
}

.misctext {
    margin-left: 10px;
}

.misctext>* {
    margin: 0px;
}

.title {
    font-size: 1rem;
}

.channel {
    font-size: 0.9rem;
    color: grey;
}

.stats {
    font-size: 0.8rem;
    color: grey;
}

.thumbnails {
    width: 360px;
    height: 202.5px;
    background-color: black;
    box-shadow:
        inset 0 0 50px #fff,
        /* inner white */
        inset 20px 0 80px rgb(0, 183, 255),
        /* inner left magenta short */
        inset -20px 0 80px lemonchiffon,
        /* inner right cyan short */
        inset 20px 0 300px rgb(0, 183, 255),
        /* inner left magenta broad */
        inset -20px 0 300px lemonchiffon;
    /* inner right cyan broad */

    border: transparent 0px solid;
    border-radius: 1px;
    display: flex;
    flex-direction: column-reverse;
}

.item {
    margin: 10px;
    padding: 0px;
}

@media screen and (max-width: 1700px) {
    aside {
      display: none;
      flex-direction: row;
      position: absolute;
      bottom: 0px;
    }

    #sub_header{
        width: 100%;
    }

    main{
        margin: auto;
    }

  }

